[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256"}
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git" }
openvm = { git = "https://github.com/openvm-org/openvm.git", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", default-features = false }
ecdsa-core = { version = "0.16.9", package = "ecdsa", default-features = false }

[[bin]]
name = "guest"
path = "src/main.rs"
