cargo-features = ["edition2024"]

[package]
name = "powdr-guest"
version = "0.1.0"
edition = "2024"

[dependencies]
powdr-riscv-syscalls = { git = "https://github.com/powdr-labs/powdr", tag = "v0.1.3" }
powdr-riscv-runtime = { git = "https://github.com/powdr-labs/powdr", tag = "v0.1.3", features = ["std"]}
k256 = { version = "0.13", features = ["ecdsa", "sha256"], default-features = false }

[workspace]
